Thu Nov  7 11:36:15 1996  Ezra Peisach  <epeisach@mit.edu>

	* tcl_kadm5.c (parse_keysalts, parse_tl_data): Do not free memory
		twice. 

	* Makefile.in: Use $(LD) instead of $(CC) for linking.

Fri Nov  1 13:16:43 1996  Barry Jaspan  <bjaspan@mit.edu>

	* tcl_kadm5.c (unparse_err): update for new tl_data semantics
 	[krb5-admin/140]

Mon Oct 21 16:31:35 1996  Barry Jaspan  <bjaspan@mit.edu>

	* tcl_kadm5.c: add unparse ability for V2 principal fields
 	[krb5-admin/20]

Fri Oct 18 13:23:46 1996  Barry Jaspan  <bjaspan@mit.edu>

	* tcl_kadm5.c (unparse_principal_ent): don't unparse allocated
 	fields that were not requested in mask to get_principal

Mon Oct 14 07:01:34 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in: Only attempt to build programs if Tcl present.

	* configure.in: Test for existance of Tcl libraries.

Thu Sep 26 11:31:57 1996  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* Makefile.in: Link with -ltcl -lm. Order the Makefile so programs
		are built.

Tue Sep 24 13:29:14 1996  Barry Jaspan  <bjaspan@mit.edu>

	* create Makefile.in and configure.in

Mon Aug 12 11:50:42 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Makefile.ov: add $(REGEXLIB)

Fri Jul 12 15:04:52 1996  Marc Horowitz  <marc@mit.edu>

	* tcl_ovsec_kadm.c: renamed <ovsec_admin/foo.h> to <kadm5/foo.h>