@@ -1,3 +1,8 @@
+Thu Nov  7 13:09:33 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* tcl_kadm5.c: don't assume tl_data_contents is null-terminated,
+ 	and zero allocated princ before parsing it
+
 Thu Nov  7 11:36:15 1996  Ezra Peisach  <epeisach@mit.edu>
 
 	* tcl_kadm5.c (parse_keysalts, parse_tl_data): Do not free memory
